day2 blog template comlete

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -1,12 +1,74 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>day #</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <title>day2-hongbo-blog-template</title>
+    <link rel="stylesheet" href="//assets.webadmin.ufl.edu/fonts/fonts.css">
+    <link rel="stylesheet" href="css/myStyle.css">
+    <link rel="stylesheet" href="css/anotherstyle.css">
+  </head>
+  <body>
 
-
-</body>
+    <h1><span class="h1-content">Header-1</span></h1>
+    <p class="center">
+      This is the simple blog template for my blogs, I use some css to create this to make is as beautiful as I could.
+    </p>
+    <p class="center">
+      The basic using is like this: (code would be wrapped with orange rectangular)
+    </p>
+    <pre class="center">
+      &lt;h1&gt;
+        &lt;span class="h1-content"&gt;Header&lt;/span&gt;
+      &lt;/h1&gt;
+      &lt;p class="center"&gt;
+        Paragraph content
+      &lt;/p&gt;
+    </pre>
+    <h3><span class="h1-content">Header-2</span></h3>
+    <p class="center">
+      All in all, this is my blog template, not a blog system, a post system would be bigger than this, I am considering using PHP to create one.
+    </p>
+    <p class="center">
+      Basic CSS setting is in 'myStyle.css' file, other small specific setting is in 'anotherstyle.css' file.
+    </p>
+  </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
