add link in index and readme, add text-indent in myStyle.css

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -32,6 +32,9 @@
     <p class="center">
       Basic CSS setting is in 'myStyle.css' file, other small specific setting is in 'anotherstyle.css' file.
     </p>
+    <p class="center">
+      This is the link to the blogs category online- <a class="btn btn-orange" href="http://angularfox.com/hongbo-365-blogs/index.html" target="_blank">Link</a>
+    </p>
   </body>
 </html>
 
